--- a/Information Visulization/Viz2/index.html
+++ b/Information Visulization/Viz2/index.html
@@ -8,11 +8,11 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E=" crossorigin="anonymous"></script>
 <br>
 <head>    
-    <title>HW2</title>
+    <title>Viz2</title>
 </head>
 
 <body>
-    <h1>Homework 2</h1>
+    <h1>Interactive Design</h1>
     <br>
     <div class="container-fluid" style="text-align:center" style="display:block margin: auto">
 	<div class="row">
@@ -60,13 +60,13 @@
 
 		<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c1">
 		    	<svg width="700" height="500" id="c1"></svg>
-		      	<div> Bubble Chart </div>
+		      	<div class="chartname"></div>
 		</div>
 
 
 		<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c2">
 		    	<svg width="700" height="500" id="c2"></svg>
-		      	<div> Bubble Chart </div>
+		      	<div class="chartname"></div>
 		</div>
 
 		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c2 panel">
@@ -154,11 +154,11 @@
 		</div>
 			<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c3">
 	    	<svg width="700" height="500" id="c3"></svg>
-	      	<div> Bubble Chart </div>
+	      	<div class="chartname"></div>
 		</div>
 		<div class="col-xlg-4 col-lg-4 col-md-4 col-sm-4 c4">
 	    	<svg width="700" height="500" id="c4"></svg>
-	      	<div> Bubble Chart </div>
+	      	<div class="chartname"></div>
 		</div>
 
 		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c4 panel">
