--- a/Information Visulization/Viz1/index.html
+++ b/Information Visulization/Viz1/index.html
@@ -7,11 +7,11 @@
 <script src="https://d3js.org/d3.v5.min.js"></script>
 
 <head>    
-    <title>HW1</title>
+    <title>Static Chart</title>
 </head>
 
 <body>
-    <h1>Homework 1</h1>
+    <h1>Static charts</h1>
    <div class="container-fluid" style="text-align:center" style="display:block margin: auto">
 	  	<div class="row" >
 		    <div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12">
