better color? ish

--- a/Information Visulization/Viz2/index.html
+++ b/Information Visulization/Viz2/index.html
@@ -16,7 +16,7 @@
     <br>
     <div class="container-fluid" style="text-align:center" style="display:block margin: auto">
 	<div class="row">
-		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c1 panel">
+		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c1 panel" style="background-color:#222">
 			<br>
 			<div class="col-xlg-12 col-lg-12 col-md-12 col-sm-12">
 			    <select class="form-control my-form" id="x">
@@ -58,18 +58,18 @@
   			</div>	
 		</div>
 
-		<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c1">
+		<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c1" style="background-color:#222">
 		    	<svg width="700" height="500" id="c1"></svg>
 		      	<div class="chartname"></div>
 		</div>
 
 
-		<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c2">
+		<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c2" style="background-color:#111">
 		    	<svg width="700" height="500" id="c2"></svg>
 		      	<div class="chartname"></div>
 		</div>
 
-		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c2 panel">
+		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c2 panel" style="background-color:#111">
 			<br>
 			<div class="col-xlg-12 col-lg-12 col-md-12 col-sm-12">
 			    <select class="form-control my-form" id="x">
@@ -110,8 +110,10 @@
 				<label for="rScale">Radius scale : <span>0.50</span></label>
   			</div>	
 		</div>
-
-		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c3 panel">
+	</div>
+	<!-- <br> -->
+	<div class="row">
+		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c3 panel" style="background-color:#111">
 			<br><br>
 			<div class="col-xlg-12 col-lg-12 col-md-12 col-sm-12">
 			    <select class="form-control my-form" id="x">
@@ -152,16 +154,16 @@
 				<label for="rScale">Radius scale : <span>0.50</span></label>
   			</div>	
 		</div>
-			<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c3">
+			<div class="col-xlg-4 col-lg-4 col-md-12 col-sm-12 c3" style="background-color:#111">
 	    	<svg width="700" height="500" id="c3"></svg>
 	      	<div class="chartname"></div>
 		</div>
-		<div class="col-xlg-4 col-lg-4 col-md-4 col-sm-4 c4">
+		<div class="col-xlg-4 col-lg-4 col-md-4 col-sm-4 c4" style="background-color:#222">
 	    	<svg width="700" height="500" id="c4"></svg>
 	      	<div class="chartname"></div>
 		</div>
 
-		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c4 panel">
+		<div class="col-xlg-2 col-lg-2 col-md-12 col-sm-12 c4 panel" style="background-color:#222">
 			<br><br>
 			<div class="col-xlg-12 col-lg-12 col-md-12 col-sm-12">
 			    <select class="form-control my-form" id="x">
@@ -202,6 +204,7 @@
 				<label for="rScale">Radius scale : <span>0.50</span></label>
   			</div>	
 		</div>
+	</div>	
 	</div>
 	  	
 	</div>
